# makra

./: Cargo.toml  Makefile  README.md  build.rs
compile/: Cargo.toml
compile/arm-binaries/: .gitignore  README.md  add.S  benri-script.sh  bl.S  br.S  clear_frame.S  compile.sh  creat_frame.S  div.S  get-pc.S  link.ld  mov_reg.S  str.S  sub.S  test-frame.c  test.S
compile/src/: codegen.rs  err.rs  ir.rs  lib.rs  parse.rs
compile/src/codegen/: aarch64.rs
compile/src/codegen/aarch64/: native.rs  reg.rs
compile/wasm-binaries/: test.wasm  test.wat
compiler/: Cargo.toml
compiler/src/: codegen.rs  compile.rs  ir.rs  lib.rs  parse.rs
compiler/wasm-binaries/: test.wasm
evaluation/: README.md  prime.rs  prime.wat
src/: compiler.rs  console.rs  cpu.rs  driver.rs  main.rs  memory.rs  panic_wait.rs  print.rs  runtime_init.rs  synchronization.rs  time.rs
src/_arch/aarch64/: cpu.rs  time.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s  test-binary.s
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/: common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs
src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  link.ld  memory.rs
src/compiler/: parse.rs  parser.rs
