[package]
name = "makra"
version = "0.1.0"
authors = ["Seiki Makino <kino.ma.ms@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
compile = { path = "./compile" }
tock-registers = { version = "0.7.x", default-features = false, features = ["register_types"], optional = true }


[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "5.x.x" }
